Fixed Background & Spacing Issues

--- a/style.css
+++ b/style.css
@@ -5,29 +5,6 @@
     box-sizing: border-box;
 }
 
-/* BACKGROUND */
-
-/*html{
-    background: url("images/nyc_banner.jpg") no-repeat center center fixed;
-    background-size: cover;
-}*/
-
-#background img{
-/*    COVER  https://css-tricks.com/perfect-full-page-background-image/ */
-    /* background: url("images/nyc_banner.jpg") no-repeat center center fixed;
-    background-size: cover; */
-
-    min-height: 100%;
-    min-width: 1024px;
-/*    width: 100%;*/
-    height: auto;
-    position: fixed;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    opacity: 0.75;
-}
-
 /* HEADER */
 
 header {
@@ -76,7 +53,9 @@ header {
 }
 
 body{
-    
+    background: center bottom url(images/nyc_banner.jpg) no-repeat;
+    background-size: cover;
+    min-height: 100vh;
 }
 
 /* BANNER */
@@ -117,6 +96,12 @@ body{
 }
 
 /* BUTTONS */
+
+.centeredcontent{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
 
 .buttons{
     display: inline-block;
